--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "blipp": "^2.3.0",
+    "boom": "^4.3.1",
     "handlebars": "^4.0.7",
     "hapi": "^16.1.1",
     "hapi-swagger": "^7.7.0",
     "inert": "^4.2.0",
     "joi": "^10.4.1",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.7",
     "swagger-client": "^3.0.8",
     "vision": "^4.1.1"
