session id generator

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "aguid": "^2.0.0",
     "bcrypt": "^1.0.2",
     "blipp": "^2.3.0",
     "boom": "^4.3.1",
