--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boom": "^4.3.1",
     "handlebars": "^4.0.7",
     "hapi": "^16.1.1",
+    "hapi-auth-jwt": "^4.0.0",
     "hapi-swagger": "^7.7.0",
     "inert": "^4.2.0",
     "joi": "^10.4.1",
