--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "bcrypt": "^1.0.2",
     "blipp": "^2.3.0",
     "boom": "^4.3.1",
+    "glue": "^4.1.0",
+    "good": "^7.1.0",
+    "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.2",
     "handlebars": "^4.0.7",
     "hapi": "^16.1.1",
-    "hapi-auth-jwt": "^4.0.0",
     "hapi-swagger": "^7.7.0",
+    "hapijs-status-monitor": "^0.5.0",
     "inert": "^4.2.0",
     "joi": "^10.4.1",
     "jsonwebtoken": "^7.4.0",
