--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "HAPI",
+  "name": "hapi-hapi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon bootstrap.js"
+    "start": "nodemon bootstrap.js",
+    "init": "knex init",
+    "migrate:make": "knex migrate:make",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:make": "knex seed:make",
+    "seed:run": "knex seed:run"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +27,16 @@
     "good-squeeze": "^5.0.2",
     "handlebars": "^4.0.7",
     "hapi": "^16.1.1",
+    "hapi-auth-jwt": "^4.0.0",
+    "hapi-auth-jwt2": "^7.2.4",
     "hapi-swagger": "^7.7.0",
     "hapijs-status-monitor": "^0.5.0",
     "inert": "^4.2.0",
     "joi": "^10.4.1",
     "jsonwebtoken": "^7.4.0",
+    "knex": "^0.13.0",
     "mongoose": "^4.9.7",
+    "mysql": "^2.13.0",
     "swagger-client": "^3.0.8",
     "vision": "^4.1.1"
   },
