--- a/package.json
+++ b/package.json
@@ -1,40 +1,28 @@
 {
-  "name": "HAPI",
+  "name": "tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon bootstrap.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "aguid": "^2.0.0",
-    "bcrypt": "^1.0.2",
     "blipp": "^2.3.0",
-    "boom": "^4.3.1",
-    "glue": "^4.1.0",
-    "good": "^7.1.0",
+    "glue": "^4.2.1",
+    "good": "^7.3.0",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
-    "handlebars": "^4.0.7",
-    "hapi": "^16.1.1",
-    "hapi-swagger": "^7.7.0",
-    "hapijs-status-monitor": "^0.5.0",
-    "inert": "^4.2.0",
-    "joi": "^10.4.1",
-    "jsonwebtoken": "^7.4.0",
-    "mongoose": "^4.9.7",
-    "swagger-client": "^3.0.8",
+    "hapi": "^16.6.2",
+    "hapi-auth-jwt2": "^7.3.0",
+    "hapi-swagger": "^8.0.0",
+    "hapijs-status-monitor": "^0.6.0",
+    "inert": "^4.2.1",
+    "rest-hapi": "^0.33.4",
     "vision": "^4.1.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1"
   }
 }
