--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapiApi",
+  "name": "hapi-17",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,17 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blipp": "^2.3.0",
-    "glue": "^4.2.1",
-    "good": "^7.3.0",
-    "good-console": "^6.4.0",
-    "good-squeeze": "^5.0.2",
-    "hapi": "^16.6.2",
-    "hapi-auth-jwt2": "^7.3.0",
-    "hapi-swagger": "^8.0.0",
-    "hapijs-status-monitor": "^0.6.0",
-    "inert": "^4.2.1",
-    "rest-hapi": "^0.33.4",
-    "vision": "^4.1.1"
+    "boom": "^7.1.1",
+    "hapi": "^17.1.1",
+    "hapi-auth-basic": "^5.0.0",
+    "hoek": "^5.0.2",
+    "inert": "^5.0.1",
+    "joi": "^13.0.2",
+    "vision": "^5.2.0"
   }
 }
