--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "migrate:make": "knex migrate:make",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:run": "knex seed:run"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,13 @@
     "hoek": "^5.0.2",
     "inert": "^5.0.1",
     "joi": "^13.0.2",
+    "jsonwebtoken": "^8.1.0",
+    "knex": "^0.14.2",
+    "mongoose": "^4.13.6",
+    "mongoose-auto-increment": "^5.0.1",
+    "nodemailer": "^4.4.1",
+    "objection": "^0.9.2",
+    "sqlite3": "^3.1.13",
     "vision": "^5.2.0"
   }
 }
